# OpenSpeedy

./: .gitignore  CMakeLists.txt  Cargo.toml  OpenSpeedy_en_US.ts  OpenSpeedy_zh_CN.ts  OpenSpeedy_zh_TW.ts  README.de-DE.md  README.en-US.md  README.fr-FR.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  build.rs  build_dlls.ps1  config.h  focusmonitor.cpp  focusmonitor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaywidget.cpp  overlaywidget.h  package-lock.json  package.json  preferencedialog.cpp  processmonitor.cpp  processmonitor.h  qsinglekeysequenceedit.cpp  themeutils.cpp  themeutils.h  winutils.cpp  winutils.h
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: build.yml
speedpatch/: CMakeLists.txt  speedpatch.cpp
src/: App.tsx  i18n.ts  main.rs  main.tsx  process_enumerator.rs  process_manager.rs
src-bridge/: Cargo.toml
src-bridge/speedpatch/: CMakeLists.txt  speedpatch.cpp  speedpatch.h
src-bridge/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge_client.rs  lib.rs  main.rs  process_enumerator.rs  system_stats.rs
src/components/: ProcessManager.tsx  SettingsManager.tsx  ShortcutField.tsx  SpeedPanel.tsx  TitleBar.tsx
src/contexts/: SnackbarContext.tsx
src/hooks/: useSettings.ts  useShortcut.ts  useTray.ts
src/locales/: de-DE.json  en-US.json  fr-FR.json  ja-JP.json  ko-KR.json  zh-CN.json  zh-TW.json
src/store/: process.ts  settings.ts
